@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix broken call to plugins
+
 0.000152  2023-04-27 02:52:44-07:00 America/Los_Angeles
 
     - Inline Importer.pm for core support
